# pipemind

./: .gitignore  README.md  SOUL.md  evolution-plan.md  install-service.bat  pipemind.bat  pipemind.py  pipemind_backup.py  pipemind_brain.py  pipemind_chronicle.py  pipemind_compress.py  pipemind_config.py  pipemind_core.py  pipemind_creative.py  pipemind_daemon.py  pipemind_daily_learn.py  pipemind_decision.py  pipemind_delegate.py  pipemind_diary.py  pipemind_doctor.py  pipemind_dream.py  pipemind_evolution.py  pipemind_federation.py  pipemind_home.py  pipemind_hunter.py  pipemind_immune.py  pipemind_knowledge_graph.py  pipemind_memory_evolution.py  pipemind_memory_plus.py  pipemind_memory_v2.py  pipemind_metabolism.py  pipemind_monitor.py  pipemind_offline.py  pipemind_precision.py  pipemind_provider.py  pipemind_security.py  pipemind_self_evolution.py  pipemind_self_improve.py  pipemind_self_test.py  pipemind_session.py  (+17 more)
backend/: .env.example  check_drawers.py  check_meta.py  mempalace_bridge.py  mempalace_server.py  package-lock.json  package.json  test-mcp-server.mjs
frontend/: index.html  package-lock.json  package.json
memory/: .baseline.json  _absorbed.json  _absorbed_skills.json  _agent_profile.json  _chronicle.json  _consolidation_log.json  _core_config.json  _daemon.pid  _daily_learn_log.json  _daily_summary.json  _decision_log.json  _home_log.txt  _home_plan.md  _home_state.json  _hunter_cache.json  _improvement_log.json  _inventions.json  _patterns.json  _perf_log.json  _skill_registry.json  _tuning_state.json  _yixin_events.json  pipemind_sessions.db
(+100 files in other folders)
