[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pipemind"
version = "4.0.0"
description = "Windows-native autonomous AI agent with self-evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "大王/gize"}
]

dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "pystray>=0.19",
]

[project.scripts]
pipemind = "pipemind:main"

[tool.setuptools]
py_modules = ["pipemind"]
packages = ["templates", "skills", "memory", "tools"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.md", "*.json", "*.yaml"]
